--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepublish": "npm run --if-present build"
   },
   "devDependencies": {
+    "eslint": "^3.17.1",
     "promised-csv": "^1.0.1",
     "textlint-scripts": "^1.2.2"
   },
